Redeploy website and remove old cruft

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="article-entry" itemprop="articleBody">
                     <p>
                         <img src="img/weekend_raytracing_with_wgpu_1/featured_image.png"><br>
-                    A look at the most notable challenges in implementing Peter Shirley&#39;s Raytracing In One Weekend to wgpu and WGSL.
+                    A look at the most notable challenges in implementing Peter Shirley&#39;s Raytracing In One Weekend using wgpu and WGSL.
                     </p>
                     <p class="article-more-link">
                         <a href="/post/weekend_raytracing_with_wgpu_1/">Read More</a>
